src/test/deca/context/invalid/Obj/extends-boolean.deca
// Description:
//    Déclaration d'une classe qui hérite des booléens
//
// Résultat:
//La superclasse donnée n'est pas une classe
//
class A extends boolean{}
{}